# nb-cli

./: .flake8  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
nb_cli/: __init__.py  __main__.py  cli.py
nb_cli/app/: app.py
nb_cli/app/install/: __init__.py  app.py
nb_cli/app/install/fcn/: kubectl.py
nb_cli/system/: __init__.py  app.py  info.py  properties.py
tests/: __init__.py
