[tool.poetry]
name = "nb-cli"
version = "0.1.0"
description = ""
authors = ["Behzad Samadi"]
readme = "README.md"
packages = [{include = "nb_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
rich = "^13.3.1"

[tool.poetry.scripts]
nb = "nb_cli.__main__:app"

[tool.poetry.group.dev.dependencies]
nox-poetry = "^1.0.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
